// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagItem accepts title override 1`] = `
<div
  className=
      ms-TagItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #f3f2f1;
        border-radius: 2px;
        box-sizing: content-box;
        color: #323130;
        cursor: default;
        display: flex;
        flex-shrink: 1;
        flex-wrap: nowrap;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 26px;
        line-height: 26px;
        margin-bottom: 2px;
        margin-left: 2px;
        margin-right: 2px;
        margin-top: 2px;
        max-width: 300px;
        min-width: 0px;
        outline: transparent;
        position: relative;
        user-select: none;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      :host(.ms-Fabric--isFocusVisible) &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:hover {
        background: #edebe9;
        color: #201f1e;
      }
      &:hover .ms-TagItem-close {
        color: #323130;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        border: 1px solid WindowText;
      }
  data-selection-index={0}
  onClick={[Function]}
  role="listitem"
>
  <span
    className=
        ms-TagItem-text
        {
          margin-bottom: 0;
          margin-left: 8px;
          margin-right: 8px;
          margin-top: 0;
          min-width: 30px;
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
    id="id__0-text"
    title="Red color"
  >
    Red
  </span>
  <button
    aria-labelledby="id__0-removeLabel id__0-text"
    className=
        ms-Button
        ms-Button--icon
        ms-TagItem-close
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background-color: transparent;
          border-radius: 0 2px 2px 0;
          border: none;
          box-sizing: border-box;
          color: #605e5c;
          cursor: pointer;
          display: inline-block;
          flex: 0 0 auto;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          width: 30px;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #ffffff;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        :host(.ms-Fabric--isFocusVisible) &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #ffffff;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        &:active > span {
          left: 0px;
          position: relative;
          top: 0px;
        }
        &:hover {
          background-color: #f3f2f1;
          background: #e1dfdd;
          color: #323130;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
          border-color: Highlight;
          color: Highlight;
        }
        &:active {
          background-color: #005a9e;
          color: #ffffff;
        }
        .is-selected &:focus {
          background: #0078d4;
          color: #ffffff;
        }
        &:focus:hover {
          background: #005a9e;
          color: #ffffff;
        }
    data-is-focusable={true}
    id="id__0"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className=
          ms-Button-flexContainer
          {
            align-items: center;
            display: flex;
            flex-wrap: nowrap;
            height: 100%;
            justify-content: center;
          }
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className=
            ms-Icon
            ms-Button-icon
            {
              display: inline-block;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            {
              flex-shrink: 0;
              font-size: 12px;
              height: 16px;
              line-height: 16px;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
              text-align: center;
            }
        data-icon-name="Cancel"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
  <span
    hidden={true}
    id="id__0-removeLabel"
  />
</div>
`;

exports[`TagItem defaults title to item name for non string children 1`] = `
<div
  className=
      ms-TagItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #f3f2f1;
        border-radius: 2px;
        box-sizing: content-box;
        color: #323130;
        cursor: default;
        display: flex;
        flex-shrink: 1;
        flex-wrap: nowrap;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 26px;
        line-height: 26px;
        margin-bottom: 2px;
        margin-left: 2px;
        margin-right: 2px;
        margin-top: 2px;
        max-width: 300px;
        min-width: 0px;
        outline: transparent;
        position: relative;
        user-select: none;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      :host(.ms-Fabric--isFocusVisible) &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:hover {
        background: #edebe9;
        color: #201f1e;
      }
      &:hover .ms-TagItem-close {
        color: #323130;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        border: 1px solid WindowText;
      }
  data-selection-index={0}
  onClick={[Function]}
  role="listitem"
>
  <span
    className=
        ms-TagItem-text
        {
          margin-bottom: 0;
          margin-left: 8px;
          margin-right: 8px;
          margin-top: 0;
          min-width: 30px;
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
    id="id__0-text"
    title="Red"
  >
    <i
      aria-hidden={true}
      className=
          ms-Icon
          {
            display: inline-block;
          }
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            font-family: "FabricMDL2Icons-15";
            font-style: normal;
            font-weight: normal;
            speak: none;
          }
      data-icon-name="SquareShapeSolid"
      style={
        Object {
          "color": "red",
          "fontFamily": "\\"FabricMDL2Icons-15\\"",
        }
      }
    >
      
    </i>
  </span>
  <button
    aria-labelledby="id__0-removeLabel id__0-text"
    className=
        ms-Button
        ms-Button--icon
        ms-TagItem-close
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background-color: transparent;
          border-radius: 0 2px 2px 0;
          border: none;
          box-sizing: border-box;
          color: #605e5c;
          cursor: pointer;
          display: inline-block;
          flex: 0 0 auto;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          width: 30px;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #ffffff;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        :host(.ms-Fabric--isFocusVisible) &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #ffffff;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        &:active > span {
          left: 0px;
          position: relative;
          top: 0px;
        }
        &:hover {
          background-color: #f3f2f1;
          background: #e1dfdd;
          color: #323130;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
          border-color: Highlight;
          color: Highlight;
        }
        &:active {
          background-color: #005a9e;
          color: #ffffff;
        }
        .is-selected &:focus {
          background: #0078d4;
          color: #ffffff;
        }
        &:focus:hover {
          background: #005a9e;
          color: #ffffff;
        }
    data-is-focusable={true}
    id="id__0"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className=
          ms-Button-flexContainer
          {
            align-items: center;
            display: flex;
            flex-wrap: nowrap;
            height: 100%;
            justify-content: center;
          }
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className=
            ms-Icon
            ms-Button-icon
            {
              display: inline-block;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            {
              flex-shrink: 0;
              font-size: 12px;
              height: 16px;
              line-height: 16px;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
              text-align: center;
            }
        data-icon-name="Cancel"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
  <span
    hidden={true}
    id="id__0-removeLabel"
  />
</div>
`;

exports[`TagItem renders correctly 1`] = `
<div
  className=
      ms-TagItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #f3f2f1;
        border-radius: 2px;
        box-sizing: content-box;
        color: #323130;
        cursor: default;
        display: flex;
        flex-shrink: 1;
        flex-wrap: nowrap;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 26px;
        line-height: 26px;
        margin-bottom: 2px;
        margin-left: 2px;
        margin-right: 2px;
        margin-top: 2px;
        max-width: 300px;
        min-width: 0px;
        outline: transparent;
        position: relative;
        user-select: none;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      :host(.ms-Fabric--isFocusVisible) &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:hover {
        background: #edebe9;
        color: #201f1e;
      }
      &:hover .ms-TagItem-close {
        color: #323130;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        border: 1px solid WindowText;
      }
  data-selection-index={0}
  onClick={[Function]}
  role="listitem"
>
  <span
    className=
        ms-TagItem-text
        {
          margin-bottom: 0;
          margin-left: 8px;
          margin-right: 8px;
          margin-top: 0;
          min-width: 30px;
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
    id="id__0-text"
    title="Red color"
  >
    Red color
  </span>
  <button
    aria-labelledby="id__0-removeLabel id__0-text"
    className=
        ms-Button
        ms-Button--icon
        ms-TagItem-close
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background-color: transparent;
          border-radius: 0 2px 2px 0;
          border: none;
          box-sizing: border-box;
          color: #605e5c;
          cursor: pointer;
          display: inline-block;
          flex: 0 0 auto;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          width: 30px;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #ffffff;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        :host(.ms-Fabric--isFocusVisible) &:focus:after {
          border: 1px solid transparent;
          bottom: 2px;
          content: "";
          left: 2px;
          outline: 1px solid #ffffff;
          position: absolute;
          right: 2px;
          top: 2px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
          bottom: -2px;
          left: -2px;
          outline-color: ButtonText;
          right: -2px;
          top: -2px;
        }
        &:active > span {
          left: 0px;
          position: relative;
          top: 0px;
        }
        &:hover {
          background-color: #f3f2f1;
          background: #e1dfdd;
          color: #323130;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
          border-color: Highlight;
          color: Highlight;
        }
        &:active {
          background-color: #005a9e;
          color: #ffffff;
        }
        .is-selected &:focus {
          background: #0078d4;
          color: #ffffff;
        }
        &:focus:hover {
          background: #005a9e;
          color: #ffffff;
        }
    data-is-focusable={true}
    id="id__0"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className=
          ms-Button-flexContainer
          {
            align-items: center;
            display: flex;
            flex-wrap: nowrap;
            height: 100%;
            justify-content: center;
          }
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className=
            ms-Icon
            ms-Button-icon
            {
              display: inline-block;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
            {
              flex-shrink: 0;
              font-size: 12px;
              height: 16px;
              line-height: 16px;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
              text-align: center;
            }
        data-icon-name="Cancel"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
  <span
    hidden={true}
    id="id__0-removeLabel"
  />
</div>
`;
